<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/skip"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_margin="23dp"
        android:background="@drawable/btn_skip"
        android:gravity="center"
        android:text="Skip"
        android:textColor="#fff"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="53dp"
        android:background="@drawable/btn_bg"
        android:gravity="center"
        android:text="Enter"
        android:textColor="#fff"
        android:textSize="18dp"
        android:visibility="gone" />

</RelativeLayout>