<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password" />

        <LinearLayout
            android:layout_marginTop="39dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regi"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:onClick="register"
                android:layout_weight="1"
                android:textColor="#fff"
                android:background="@drawable/btn_bg"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Register" />

            <Button
                android:id="@+id/login"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:background="@drawable/btn_bg"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Login" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>