<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/normal"
            android:gravity="center"
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:background="@drawable/bg1"
            android:text="User"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/admin"
            android:gravity="center"
            android:layout_width="180dp"
            android:layout_marginTop="50dp"
            android:layout_height="65dp"
            android:background="@drawable/bg1"
            android:text="Administrator"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
