...
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/cpgl"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="userManager"
...
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/fcgl"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="bookManager"
...
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/mmm1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="activityManager"
...
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/mmm2"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="messageManager"
...
